[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build==0.14.0",
    "cmake>=3.18",
    "nanobind>=0.0.3",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[project]
name = "planning"
dynamic = ["version"]
requires-python = '>=3.8'
dependencies = [
  'numpy',
  'matplotlib',
]

[tool.setuptools]
packages = ["planning"]
