[build-system]
requires = [
    "setuptools",
    "wheel",
    "scikit-build",
    "nanobind",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[project]
name = "planning"
dynamic = ["version"]
requires-python = '>=3.8'
dependencies = [
  'numpy',
  'matplotlib',
]

[tool.setuptools]
packages = ["planning"]
