[build-system]
requires = [
  "setuptools",
  "wheel",
  "scikit-build",
  "nanobind==0.0.8",
  "ninja; platform_system!='Windows'",
]

build-backend = "setuptools.build_meta"

[project]
name = "planning"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib", "pandas", "plotly", "scipy"]

[tool.setuptools]
packages = ["planning"]
